# makemeglow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  glow.cpp  glow.h
docs/: notes.md
examples/: CMakeLists.txt  glow_app.cpp  hello.cpp
include/makemeglow/: buffer.h  color.h  color_buffer.h  font_rasterizer.h  glow.h  png.h
src/: CMakeLists.txt  color.cpp  color_buffer.cpp  font_rasterizer.cpp  font_rasterizer.h  gauss.cpp  gauss.h  gauss_kernel.cpp  gauss_kernel.h  glow.cpp  glow_buffer.cpp  glow_buffer.h  png.cpp
tests/: CMakeLists.txt  color_test.cpp  font_rasterizer_fluky_test.cpp  font_rasterizer_test.cpp  gauss_test.cpp  glow_buffer_test.cpp  glow_test.cpp  png_test.cpp  read_png.cpp  read_png.h  test_data.h
tests/data/font/: README.md  my_font.txt
tests/data/font/non_scalable/: corrupted-cherry-10-r.bdf
